--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <section class="container">
-      <h1>Meu timer</h1>
+      <h1>Timer</h1>
       <p class="relogio">00:00:00</p>
       <p>
         <button class="iniciar">Iniciar</button>
